--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,22 +17,35 @@
     <LinearLayout
         android:id="@+id/startLayout"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:padding="10dp"
-        android:layout_marginBottom="40dp">
+        android:layout_marginBottom="80dp">
 
         <Button
             android:id="@+id/buttonRecipes"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/button_stroke_black80_press_white"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="25sp"
             android:text="@string/recipes" />
+
+        <Button
+            android:id="@+id/buttonMenus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_stroke_black80_press_white"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textSize="25sp"
+            android:text="Меню" />
     </LinearLayout>
 
 </RelativeLayout>
